fix(apache): Update SSL configuration and virtual host settings for improved HTTPS handling.

--- a/.env.example
+++ b/.env.example
@@ -65,5 +65,7 @@ PHP_FPM_START_SERVERS=5
 PHP_FPM_STATUS_PATH=/fpm-status
 
 # SSL Configuration
+SSL_AUTO_GENERATE=false
 SSL_DIR=/etc/apache2/ssl
+SSL_CERT_FILE=/etc/apache2/ssl/cert.pem
 SSL_KEY_FILE=/etc/apache2/ssl/key.pem
