--- a/src/flavor/apache/etc/sites-available/vhost-ssl-full.conf
+++ b/src/flavor/apache/etc/sites-available/vhost-ssl-full.conf
@@ -12,9 +12,12 @@
 
     # Redirect to HTTPS
     RewriteEngine On
-    RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
-    RewriteCond %{HTTPS} off
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+    # Redirect localhost to port 8443, others to standard HTTPS (port 443)
+    RewriteCond %{SERVER_NAME} =localhost
+    RewriteRule ^ https://%{SERVER_NAME}:8443%{REQUEST_URI} [R=301,L,NE]
+    RewriteCond %{SERVER_NAME} !=localhost
+    RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L,NE]
 </VirtualHost>
 
 # HTTPS Virtual Host
