--- a/src/flavor/apache/etc/conf-available/vhost-common.conf
+++ b/src/flavor/apache/etc/conf-available/vhost-common.conf
@@ -2,6 +2,7 @@
 # Common Virtual Host Configuration for Yii2
 #==============================================================================
 
+ServerName localhost
 ServerAdmin webmaster@localhost
 DocumentRoot ${APACHE_DOCUMENT_ROOT}
 
