--- a/src/flavor/apache/etc/sites-available/vhost-ssl-full.conf
+++ b/src/flavor/apache/etc/sites-available/vhost-ssl-full.conf
@@ -4,6 +4,8 @@
 
 # HTTP Virtual Host
 <VirtualHost *:80>
+    # ServerName directive
+    ServerName localhost
     # Enable HTTP/2 cleartext and HTTP/1.1
     Protocols h2c http/1.1
 
