--- a/src/flavor/apache/etc/sites-available/vhost-ssl.conf
+++ b/src/flavor/apache/etc/sites-available/vhost-ssl.conf
@@ -4,6 +4,9 @@
 
 # HTTPS Virtual Host
 <VirtualHost *:443>
+    # ServerName directive
+    ServerName localhost
+
     # Enable HTTP/2 and HTTP/1.1 over SSL
     Protocols h2 http/1.1
 
