Apply fixed review coderabbitai nitpick comments.

--- a/src/flavor/apache/etc/sites-available/vhost-ssl-full.conf
+++ b/src/flavor/apache/etc/sites-available/vhost-ssl-full.conf
@@ -6,6 +6,9 @@
 <VirtualHost *:80>
     # ServerName directive
     ServerName localhost
+    # ServerAlias directive for localhost IP
+    ServerAlias 127.0.0.1
+    
     # Enable HTTP/2 cleartext and HTTP/1.1
     Protocols h2c http/1.1
 
