--- a/src/flavor/apache/etc/sites-available/vhost-ssl.conf
+++ b/src/flavor/apache/etc/sites-available/vhost-ssl.conf
@@ -6,6 +6,8 @@
 <VirtualHost *:443>
     # ServerName directive
     ServerName localhost
+    # ServerAlias directive for localhost IP
+    ServerAlias 127.0.0.1
 
     # Enable HTTP/2 and HTTP/1.1 over SSL
     Protocols h2 http/1.1
