--- a/src/flavor/apache/etc/sites-available/vhost-ssl-full.conf
+++ b/src/flavor/apache/etc/sites-available/vhost-ssl-full.conf
@@ -4,6 +4,11 @@
 
 # HTTP Virtual Host
 <VirtualHost *:80>
+    # ServerName directive
+    ServerName localhost
+    # ServerAlias directive for localhost IP
+    ServerAlias 127.0.0.1
+    
     # Enable HTTP/2 cleartext and HTTP/1.1
     Protocols h2c http/1.1
 
@@ -12,9 +17,12 @@
 
     # Redirect to HTTPS
     RewriteEngine On
-    RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
-    RewriteCond %{HTTPS} off
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+    # Redirect localhost to port 8443, others to standard HTTPS (port 443)
+    RewriteCond %{SERVER_NAME} =localhost
+    RewriteRule ^ https://%{SERVER_NAME}:8443%{REQUEST_URI} [R=301,L,NE]
+    RewriteCond %{SERVER_NAME} !=localhost
+    RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L,NE]
 </VirtualHost>
 
 # HTTPS Virtual Host
