--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,19 @@
 on:
-  push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
+    paths-ignore:
+      - 'docs/**'
+      - 'README.md'
+      - 'CHANGELOG.md'
+      - '.gitignore'
+      - '.gitattributes'
+
+  push:
+    paths-ignore:
+      - 'docs/**'
+      - 'README.md'
+      - 'CHANGELOG.md'
+      - '.gitignore'
+      - '.gitattributes'
 
 concurrency:
   group: build-${{ github.workflow }}-${{ github.ref }}
@@ -34,14 +43,6 @@ jobs:
 
     - name: Setup Docker Buildx.
       uses: docker/setup-buildx-action@v3
-
-    - name: Login to GitHub Container Registry.
-      if: github.event_name == 'push'  # Push events only; not on PRs
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Prepare tags.
       id: tags
@@ -77,22 +78,6 @@ jobs:
           BUILD_TYPE=${{ matrix.build_type }}
           PHP_VERSION=${{ steps.tags.outputs.PHP_VERSION }}
         cache-from: type=gha,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
-        provenance: false
-        sbom: false
-
-    - name: Build and Push
-      if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        file: ./src/flavor/apache/Dockerfile
-        push: ${{ github.event_name == 'push' }}
-        tags: ${{ steps.tags.outputs.TAG }}
-        build-args: |
-          BUILD_TYPE=${{ matrix.build_type }}
-          PHP_VERSION=${{ steps.tags.outputs.PHP_VERSION }}
-        cache-from: type=gha,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
-        cache-to: type=gha,mode=max,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
         provenance: false
         sbom: false
 
