--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,12 +35,6 @@ jobs:
         elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
           VERSION="${{ github.event.inputs.version }}"
           SHOULD_BUILD="true"
-        # From PR title (optional)
-        elif [[ "${{ github.event_name }}" == "pull_request" ]]; then
-          if [[ "${{ github.event.pull_request.title }}" =~ \[v([0-9]+\.[0-9]+\.[0-9]+)\] ]]; then
-            VERSION="${BASH_REMATCH[1]}"
-            SHOULD_BUILD="true"
-          fi
         fi
 
         # Validate semantic version
@@ -111,7 +105,7 @@ jobs:
       with:
         context: .
         file: ./src/flavor/apache/Dockerfile
-        push: ${{ github.ref_type == 'tag' }}
+        push: ${{ needs.validate-version.outputs.should_build == 'true' }}
         tags: ${{ steps.tags.outputs.tags }}
         build-args: |
           BUILD_TYPE=${{ matrix.build_type }}
