fix(release): Refactor version extraction and validation logic in release workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,27 +23,30 @@ jobs:
     steps:
     - name: Extract version.
       id: version
+      env:
+        INPUT_VERSION: ${{ github.event.inputs.version }}
       run: |
+        set -Eeuo pipefail
         VERSION=""
         SHOULD_BUILD="false"
 
         # From tag
-        if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
-          VERSION="${GITHUB_REF#refs/tags/v}"
+        if [[ "${GITHUB_REF_NAME:-}" == v* ]]; then
+          VERSION="${GITHUB_REF_NAME#v}"
           SHOULD_BUILD="true"
         # From workflow dispatch
         elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-          VERSION="${{ github.event.inputs.version }}"
+          VERSION="$INPUT_VERSION"
           SHOULD_BUILD="true"
         fi
 
         # Validate semantic version
         if [[ "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "should_build=$SHOULD_BUILD" >> $GITHUB_OUTPUT
+          printf 'version=%s\n' "$VERSION" >> "$GITHUB_OUTPUT"
+          printf 'should_build=%s\n' "$SHOULD_BUILD" >> "$GITHUB_OUTPUT"
           echo "✅ Valid version: $VERSION"
         else
-          echo "should_build=false" >> $GITHUB_OUTPUT
+          echo "should_build=false" >> "$GITHUB_OUTPUT"
           echo "⚠️ No valid version found"
         fi
 
