fix(apache): Enhance Dockerfile and scripts for improved dependency management and permissions.

--- a/src/flavor/apache/etc/apache2.conf
+++ b/src/flavor/apache/etc/apache2.conf
@@ -104,6 +104,9 @@ LogLevel warn
     # JSON format for structured logging
     LogFormat "{\"time\":\"%t\",\"remote_ip\":\"%a\",\"host\":\"%V\",\"request\":\"%U\",\"query\":\"%q\",\"method\":\"%m\",\"status\":\"%>s\",\"user_agent\":\"%{User-Agent}i\",\"referer\":\"%{Referer}i\",\"response_time\":\"%{ms}T\"}" json_log
 
+    # Don't log health checks
+    SetEnvIf Request_URI "^/(health(\.php)?|fpm-(ping|status))$" no_log
+
     # Emit to stdout by default; switch to json_log if desired.
     CustomLog ${APACHE_ACCESS_LOG} combined_time
 </IfModule>
