--- a/src/flavor/apache/etc/apache2.conf
+++ b/src/flavor/apache/etc/apache2.conf
@@ -108,7 +108,7 @@ LogLevel warn
     SetEnvIf Request_URI "^/(health(\.php)?|fpm-(ping|status))$" no_log
 
     # Emit to stdout by default; switch to json_log if desired.
-    CustomLog ${APACHE_ACCESS_LOG} combined_time
+    CustomLog ${APACHE_ACCESS_LOG} combined_time env=!no_log
 </IfModule>
 
 # Include module configuration
