--- a/src/flavor/apache/etc/apache2.conf
+++ b/src/flavor/apache/etc/apache2.conf
@@ -29,14 +29,6 @@ KeepAliveTimeout 5
     H2MaxWorkers 50
     H2MaxWorkerIdleSeconds 600
 
-    # Enable HTTP/2 Push
-    H2Push on
-    H2PushPriority * after
-    H2PushPriority text/css before
-    H2PushPriority image/jpeg after 32
-    H2PushPriority image/png after 32
-    H2PushPriority application/javascript interleaved
-
     # Early Hints (103 response)
     H2EarlyHints on
 </IfModule>
@@ -45,16 +37,10 @@ KeepAliveTimeout 5
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
 
-# Basic Security
-ServerTokens Prod
-ServerSignature Off
-HostnameLookups Off
-TraceEnable Off
-Header always unset "X-Powered-By"
-Header unset "X-Powered-By"
-
 # Default ServerName
 ServerName localhost
+# Default ServerAlias directive for localhost IP
+ServerAlias 127.0.0.1
 
 # MPM Event Configuration - Optimized for PHP-FPM proxy
 <IfModule mpm_event_module>
@@ -139,14 +125,7 @@ Listen 80
 # Security Headers - Global
 <IfModule headers_module>
     # Security headers
-    Header always set X-Frame-Options "SAMEORIGIN"
-    Header always set X-Content-Type-Options "nosniff"
-    Header always set X-XSS-Protection "1; mode=block"
-    Header always set Referrer-Policy "strict-origin-when-cross-origin"
 
-    # Remove PHP version header
-    Header always unset "X-Powered-By"
-    Header unset "X-Powered-By"
 </IfModule>
 
 # MIME Types
