--- a/src/flavor/apache/etc/conf-available/security.conf
+++ b/src/flavor/apache/etc/conf-available/security.conf
@@ -10,8 +10,9 @@
 </Directory>
 
 # Disable server signature and information disclosure
-ServerTokens Prod
+HostnameLookups Off
 ServerSignature Off
+ServerTokens Prod
 TraceEnable Off
 
 #==============================================================================
