Apply fixed review coderabbitai.

--- a/src/flavor/apache/Dockerfile
+++ b/src/flavor/apache/Dockerfile
@@ -70,6 +70,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
 # Layer 1: System packages + gosu
 RUN apt-get update && apt-get install -y --no-install-recommends \
     apache2 \
+    brotli \
     supervisor \
     curl \
     openssl \
@@ -116,6 +117,7 @@ RUN install-php-extensions \
 
 # Layer 6: Apache configuration
 RUN a2dismod mpm_prefork 2>/dev/null || true \
+    && a2enmod brotli \
     && a2enmod mpm_event \
     && a2enmod rewrite headers expires ssl proxy proxy_fcgi http2 \
     && a2dissite 000-default
@@ -226,24 +228,24 @@ ENV BUILD_TYPE=${BUILD_TYPE} \
     SERVICE_TYPE=apache-fpm
 
 # Layer 17: Copy Apache configuration files
-COPY /src/flavor/apache/etc/apache2.conf /etc/apache2/
-COPY /src/flavor/apache/etc/conf-available/ /etc/apache2/conf-available/
-COPY /src/flavor/apache/etc/sites-available/ /etc/apache2/sites-available/
-COPY /src/flavor/apache/etc/ssl/ /etc/apache2/ssl/
+COPY src/flavor/apache/etc/apache2.conf /etc/apache2/
+COPY src/flavor/apache/etc/conf-available/ /etc/apache2/conf-available/
+COPY src/flavor/apache/etc/sites-available/ /etc/apache2/sites-available/
+COPY src/flavor/apache/etc/ssl/ /etc/apache2/ssl/
 
 # Layer 18: Copy PHP Configurations
-COPY /src/php-fpm/docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
-COPY /src/php/ /tmp/php/
+COPY src/php-fpm/docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
+COPY src/php/ /tmp/php/
 RUN cp "/tmp/php/${BUILD_TYPE}.ini" /usr/local/etc/php/conf.d/99-app.ini \
     && rm -rf /tmp/php
 
 # Layer 19: Copy Supervisor configurations
-COPY /src/supervisor/conf.d/ /etc/supervisor/conf.d/
-COPY /src/supervisor/supervisord.conf /etc/supervisor/
+COPY src/supervisor/conf.d/ /etc/supervisor/conf.d/
+COPY src/supervisor/supervisord.conf /etc/supervisor/
 
 # Layer 20: Copy scripts
-COPY /src/script/common/ /usr/local/bin/common/
-COPY /src/script/entrypoint.sh /usr/local/bin/entrypoint
+COPY src/script/common/ /usr/local/bin/common/
+COPY src/script/entrypoint.sh /usr/local/bin/entrypoint
 
 # Layer 21: Enable only security configuration by default
 RUN a2enconf \
