--- a/src/flavor/apache/etc/apache2.conf
+++ b/src/flavor/apache/etc/apache2.conf
@@ -7,7 +7,7 @@
 # Basic Directory Security
 #------------------------------------------------------------------------------
 <Directory />
-    Options -Indexes -Includes -ExecCGI -FollowSymLinks
+    Options -Indexes -Includes -ExecCGI -FollowSymLinks -MultiViews
     AllowOverride None
     Require all denied
 </Directory>
@@ -18,7 +18,7 @@
 </Directory>
 
 <Directory /var/www/>
-    Options -Indexes +FollowSymLinks
+    Options -Indexes +SymLinksIfOwnerMatch
     AllowOverride None
     Require all granted
 </Directory>
@@ -31,7 +31,6 @@ ErrorLog ${APACHE_ERROR_LOG_FILE}
 Group ${APACHE_RUN_GROUP}
 Listen 80
 Mutex file:${APACHE_LOCK_DIR} default
-PassEnv APACHE_DOCUMENT_ROOT
 PidFile ${APACHE_PID_FILE}
 ServerName localhost
 ServerRoot "/etc/apache2"
@@ -54,34 +53,14 @@ User ${APACHE_RUN_USER}
 </IfModule>
 
 #------------------------------------------------------------------------------
-# Modular Configuration Includes
+# Load Modules (must be before conf-enabled)
 #------------------------------------------------------------------------------
-# Performance
-Include /etc/apache2/conf-available/01-performance.conf
-
-# Security
-Include /etc/apache2/conf-available/02-security.conf
-
-# SSL/TLS
-Include /etc/apache2/conf-available/03-ssl-tls.conf
-
-# Compression
-Include /etc/apache2/conf-available/04-compression.conf
-
-# PHP-FPM Proxy
-Include /etc/apache2/conf-available/06-php-fpm.conf
-
-# Logging
-Include /etc/apache2/conf-available/07-logging.conf
-
-# Rate Limiting and Traffic Control
-Include /etc/apache2/conf-available/08-rate-limiting.conf
-
-# Loaded modules
 IncludeOptional mods-enabled/*.load
 IncludeOptional mods-enabled/*.conf
 
-# Other
+#------------------------------------------------------------------------------
+# Modular Configuration Includes (enabled via a2enconf)
+#------------------------------------------------------------------------------
 IncludeOptional conf-enabled/*.conf
 IncludeOptional sites-enabled/*.conf
 
