--- a/src/flavor/apache/etc/conf-available/01-performance.conf
+++ b/src/flavor/apache/etc/conf-available/01-performance.conf
@@ -45,23 +45,15 @@ Timeout 60
 # Prevent memory leaks and optimize resource usage
 #------------------------------------------------------------------------------
 <IfModule mpm_event_module>
-    # Core dump settings (disable in production)
-    CoreDumpDirectory /tmp
     # Graceful shutdowns
     GracefulShutdownTimeout 10
-</IfModule>
-
-# File descriptor limits
-<IfModule mod_systemd.c>
-    # Increase file descriptor limit for high-traffic sites
-    # SystemdListenBacklog 511
 </IfModule>
 
 #------------------------------------------------------------------------------
 # MPM Event Configuration
 #------------------------------------------------------------------------------
 <IfModule mpm_event_module>
-    # Async processing for better PHP-FPM integration
+    # Factor of 2 means each worker can handle 2x connections than threads
     AsyncRequestWorkerFactor 2
 
     # Set ServerLimit to accommodate MaxRequestWorkers
