--- a/src/flavor/apache/etc/conf-available/04-compression.conf
+++ b/src/flavor/apache/etc/conf-available/04-compression.conf
@@ -8,7 +8,7 @@
 #------------------------------------------------------------------------------
 <IfModule mod_brotli.c>
     # Content types to compress
-    AddOutputFilterByType BROTLI \
+    AddOutputFilterByType BROTLI_COMPRESS \
         text/html \
         text/plain \
         text/xml \
@@ -31,27 +31,14 @@
         application/vnd.ms-fontobject \
         application/x-font-opentype \
         application/x-font-truetype \
-        application/font-woff \
-        application/font-woff2 \
         application/manifest+json \
         image/svg+xml \
         image/x-icon
-
-    # Compression settings
-    BrotliCompressionLevel 6
-    BrotliCompressionMaxInputBlock 0
-    BrotliCompressionWindowSize 22
-
-    # Enable Brotli compression
-    SetOutputFilter BROTLI
 
     # Don't compress already compressed files
     SetEnvIfNoCase Request_URI \
         \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|rar|bz2|7z|tar|lzma|Z)$ \
         no-br no-gzip dont-vary
-
-    # Don't compress small files (< 1KB)
-    SetEnvIf Content-Length "^[0-9][0-9][0-9]$" no-br
 
     # Set proper Vary header
     <IfModule mod_headers.c>
@@ -106,9 +93,6 @@
             \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|rar|bz2|7z|tar|lzma|Z)$ \
             no-gzip dont-vary
 
-        # Don't compress small files
-        SetEnvIf Content-Length "^[0-9][0-9][0-9]$" no-gzip
-
         # Netscape 4.x workaround
         BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
         BrowserMatch ^Mozilla/4 gzip-only-text/html
@@ -133,38 +117,25 @@
 
 # Pre-compression support (if you pre-compress files)
 <IfModule mod_rewrite.c>
+    # Enable rewrite engine
     RewriteEngine On
 
-    # Serve pre-compressed .br files if available
+    # Serve pre-compressed assets for CSS/JS only
+    RewriteCond %{REQUEST_FILENAME} -f
     RewriteCond %{HTTP:Accept-Encoding} br
-    RewriteCond %{REQUEST_FILENAME}\.br -s
-    RewriteRule ^(.*)$ $1\.br [QSA,L]
+    RewriteRule ^(.+)\.(css|js)$ $1.$2.br [QSA,L,E=BR:1]
 
-    # Serve pre-compressed .gz files if available (fallback)
+    RewriteCond %{REQUEST_FILENAME} -f
     RewriteCond %{HTTP:Accept-Encoding} gzip
-    RewriteCond %{REQUEST_FILENAME}\.gz -s
-    RewriteRule ^(.*)$ $1\.gz [QSA,L]
+    RewriteRule ^(.+)\.(css|js)$ $1.$2.gz [QSA,L,E=GZ:1]
 
-    # Set proper content type for pre-compressed files
-    <FilesMatch "\.css\.br$">
-        Header set Content-Type "text/css"
-        Header set Content-Encoding "br"
-    </FilesMatch>
-
-    <FilesMatch "\.js\.br$">
-        Header set Content-Type "application/javascript"
-        Header set Content-Encoding "br"
-    </FilesMatch>
-
-    <FilesMatch "\.css\.gz$">
-        Header set Content-Type "text/css"
-        Header set Content-Encoding "gzip"
-    </FilesMatch>
-
-    <FilesMatch "\.js\.gz$">
-        Header set Content-Type "application/javascript"
-        Header set Content-Encoding "gzip"
-    </FilesMatch>
+    # Set correct Content-Encoding for pre-compressed files
+    <IfModule mod_headers.c>
+        Header set Content-Encoding "br" env=BR
+        Header set Content-Encoding "gzip" env=GZ
+        Header set Content-Type "text/css" "expr=%{REQUEST_URI} =~ m#\.css(\.br|\.gz)$#"
+        Header set Content-Type "application/javascript" "expr=%{REQUEST_URI} =~ m#\.js(\.br|\.gz)$#"
+    </IfModule>
 </IfModule>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
