--- a/src/flavor/apache/etc/conf-available/06-php-fpm.conf
+++ b/src/flavor/apache/etc/conf-available/06-php-fpm.conf
@@ -149,9 +149,10 @@ ProxyFCGISetEnvIf "req('REMOTE_USER') =~ /.+/" REMOTE_USER=%{HTTP:REMOTE_USER}
     <Location /fpm-status-full>
         SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://php-fpm"
 
+
         # Add query string for full status
         ProxyPreserveHost On
-        ProxyPass "unix:/var/run/php/php-fpm.sock|fcgi://php-fpm/?full"
+        ProxyPass "unix:/var/run/php/php-fpm.sock|fcgi://php-fpm/fpm-status?full"
 
         # Access control - more restrictive
         Require ip 127.0.0.1
@@ -167,7 +168,7 @@ ProxyFCGISetEnvIf "req('REMOTE_USER') =~ /.+/" REMOTE_USER=%{HTTP:REMOTE_USER}
     </Location>
 
     # FPM Ping page
-    <Location /fmp-ping>
+    <Location /fpm-ping>
         SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://php-fpm"
 
         # Access control
