--- a/src/flavor/apache/etc/conf-available/07-logging.conf
+++ b/src/flavor/apache/etc/conf-available/07-logging.conf
@@ -9,22 +9,6 @@
 <IfModule log_config_module>
     # Main access log (JSON format recommended for production)
     CustomLog ${APACHE_ACCESS_LOG} json_log env=!no_log
-
-    # Alternative: Combined format with timing (comment above and uncomment below)
-    # CustomLog ${APACHE_ACCESS_LOG} combined_time env=!no_log
-
-    # Security log (separate file)
-    # CustomLog logs/security.log security_log env=security_request
-
-    # API access log (separate file for APIs)
-    # CustomLog logs/api_access.log api_log env=api_request
-
-    # Performance log for slow requests
-    # CustomLog logs/slow_requests.log perf_log env=slow_request
-
-    # Error responses log
-    # CustomLog logs/client_errors.log combined_time env=client_error
-    # CustomLog logs/server_errors.log combined_time env=server_error
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -42,17 +26,10 @@
     # Log API requests
     SetEnvIf Request_URI "^/api/" api_request
 
-    # Log error responses
-    SetEnvIf Status "^4\d\d" client_error
-    SetEnvIf Status "^5\d\d" server_error
-
     # Log security-related requests separately
     SetEnvIf Request_URI "\.(php|cgi|pl|py|sh|bat)$" security_request
     SetEnvIf Query_String "(union|select|insert|delete|update|drop|exec|script)" security_request
     SetEnvIf User-Agent "(bot|crawler|scan|hack|inject)" security_request
-
-    # Log slow requests
-    SetEnvIf Response_Time ">5000" slow_request
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -70,7 +47,7 @@
 \"response_time\":%{ms}T,\
 \"size\":%O,\
 \"user_agent\":\"%{User-Agent}i\",\
-\"api_key\":\"%{X-API-Key}i\",\
+\"api_key\":\"[redacted]\",\
 \"rate_limit\":\"%{X-RateLimit-Remaining}o\"\
 }" api_log
 
@@ -119,10 +96,8 @@
 #------------------------------------------------------------------------------
 # Error Log Customization
 #------------------------------------------------------------------------------
-# Error log format (Apache 2.4.13+)
-<IfModule mod_log_debug.c>
-    ErrorLogFormat "[%{u}t] [%-m:%l] [pid %P:tid %T] %7F: %E: [client\ %a] %M% ,\ referer\ %{Referer}i"
-</IfModule>
+# Apache 2.4.13+ supports ErrorLogFormat
+ErrorLogFormat "[%{u}t] [%-m:%l] [pid %P:tid %T] %7F: %E: [client %a] %M, referer %{Referer}i"
 
 # Log specific modules at different levels
 LogLevel rewrite:warn
@@ -154,16 +129,7 @@ LogLevel headers:warn
 
         # Add to logs
         LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\" %{ms}T rid:%{UNIQUE_ID}e" combined_with_id
-
-        # Uncomment to use this format instead of the default
-        # CustomLog ${APACHE_ACCESS_LOG} combined_with_id env=!no_log
     </IfModule>
-
-    # Response time header (for monitoring)
-    Header always set X-Response-Time "%D μs"
-
-    # Server load header (if mod_status is enabled)
-    # Header always set X-Server-Load "%{SERVER_LOAD}e"
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -173,10 +139,6 @@ LogLevel headers:warn
     <IfModule log_config_module>
         # SSL-specific log format
         LogFormat "%t [SSL] %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %>s" ssl_log
-
-        # SSL handshake logging (very verbose, use only for debugging)
-        # LogLevel ssl:debug
-        # CustomLog logs/ssl_request.log ssl_log
     </IfModule>
 </IfModule>
 
