--- a/src/flavor/apache/etc/conf-available/02-security.conf
+++ b/src/flavor/apache/etc/conf-available/02-security.conf
@@ -41,12 +41,6 @@ ErrorDocument 503 "Service Unavailable"
     RewriteCond %{QUERY_STRING} (\<|%3C).*(iframe|object|embed).*(\>|%3E) [NC,OR]
     RewriteCond %{QUERY_STRING} (union.*select|insert.*into|delete.*from|update.*set) [NC]
     RewriteRule .* - [F,L]
-
-    # Block malicious user agents
-    RewriteCond %{HTTP_USER_AGENT} ^$ [OR]
-    RewriteCond %{HTTP_USER_AGENT} ^(java|curl|wget|python|perl|libwww|lwp-trivial|echo|bot|scan|nikto|nessus|sqlmap|w3af|acunetix|netsparker|burp|ZAP) [NC,OR]
-    RewriteCond %{HTTP_USER_AGENT} (eval\(|javascript:|vbscript:|onload=|onerror=|onclick=) [NC]
-    RewriteRule .* - [F,L]
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -169,6 +163,7 @@ LimitRequestLine 8190
         frame-ancestors 'self'; \
         form-action 'self'; \
         base-uri 'self'; \
+        upgrade-insecure-requests; \
         manifest-src 'self'"
 
     # Cross-Origin Policies
