--- a/src/flavor/apache/etc/conf-available/07-logging.conf
+++ b/src/flavor/apache/etc/conf-available/07-logging.conf
@@ -55,7 +55,7 @@
     LogFormat "%t [ERROR] %a \"%r\" %>s \"%{User-Agent}i\" error:\"%e\"" error_log_format
 
     # HTTP/2 Enhanced Format
-    LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\" %{ms}T proto:%{HTTP2}e ssl:%{SSL_PROTOCOL}x cipher:%{SSL_CIPHER}x" h2_combined
+    LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\" %{ms}T proto:%{HTTP2}n ssl:%{SSL_PROTOCOL}x cipher:%{SSL_CIPHER}x" h2_combined
 
     # JSON Format for Structured Logging
     LogFormat "{\
@@ -74,7 +74,7 @@
 \"user_agent\":\"%{User-Agent}i\",\
 \"response_time_ms\":%{ms}T,\
 \"response_time_us\":%D,\
-\"http2\":\"%{HTTP2}e\",\
+\"http2\":\"%{HTTP2}n\",\
 \"ssl_protocol\":\"%{SSL_PROTOCOL}x\",\
 \"ssl_cipher\":\"%{SSL_CIPHER}x\",\
 \"forwarded_for\":\"%{X-Forwarded-For}i\",\
