Apply fixed review coderabbitai nitpick comments.

--- a/src/flavor/apache/etc/conf-available/07-logging.conf
+++ b/src/flavor/apache/etc/conf-available/07-logging.conf
@@ -26,10 +26,10 @@
     # Log API requests
     SetEnvIf Request_URI "^/api/" api_request
 
-    # Log security-related requests separately
-    SetEnvIf Request_URI "\.(php|cgi|pl|py|sh|bat)$" security_request
-    SetEnvIf Query_String "(union|select|insert|delete|update|drop|exec|script)" security_request
-    SetEnvIf User-Agent "(bot|crawler|scan|hack|inject)" security_request
+    # Log security-related requests (for example, potential attacks)
+    SetEnvIfNoCase Request_URI "\.(php|cgi|pl|py|sh|bat)$" security_request
+    SetEnvIfNoCase Query_String "(?i)\b(union|select|insert|delete|update|drop|exec|script)\b" security_request
+    SetEnvIfNoCase User-Agent "(bot|crawler|scan|hack|inject)" security_request
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -100,23 +100,11 @@
 ErrorLogFormat "[%{u}t] [%-m:%l] [pid %P:tid %T] %7F: %E: [client %a] %M, referer %{Referer}i"
 
 # Log specific modules at different levels
-LogLevel rewrite:warn
-LogLevel ssl:warn
+LogLevel brotli:warn
 LogLevel deflate:warn
 LogLevel headers:warn
-
-#------------------------------------------------------------------------------
-# Log Rotation and Management
-#------------------------------------------------------------------------------
-# Note: Log rotation is typically handled by logrotate
-# Example logrotate configuration should be placed in /etc/logrotate.d/apache2
-
-# For immediate log management, you can use:
-<IfModule mod_log_rotate.c>
-    # Rotate logs daily (if mod_log_rotate is available)
-    RotateLogs logs/access.log 86400
-    RotateLogs logs/error.log 86400
-</IfModule>
+LogLevel rewrite:warn
+LogLevel ssl:warn
 
 #------------------------------------------------------------------------------
 # Performance Monitoring Integration
@@ -125,7 +113,8 @@ LogLevel headers:warn
 <IfModule mod_headers.c>
     # Add unique request ID for tracking
     <IfModule mod_unique_id.c>
-        Header always set X-Request-ID %{UNIQUE_ID}e
+        # Set unique ID in request header
+        Header always set X-Request-ID "expr=%{reqenv:UNIQUE_ID}"
 
         # Add to logs
         LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\" %{ms}T rid:%{UNIQUE_ID}e" combined_with_id
