Apply fixed review coderabbitai nitpick comments.

--- a/src/flavor/apache/etc/conf-available/07-logging.conf
+++ b/src/flavor/apache/etc/conf-available/07-logging.conf
@@ -28,7 +28,7 @@
 
     # Log security-related requests (for example, potential attacks)
     SetEnvIfNoCase Request_URI "\.(php|cgi|pl|py|sh|bat)$" security_request
-    SetEnvIfNoCase Query_String "(?i)\b(union|select|insert|delete|update|drop|exec|script)\b" security_request
+    SetEnvIfNoCase Query_String "\b(union|select|insert|delete|update|drop|exec|script)\b" security_request
     SetEnvIfNoCase User-Agent "(bot|crawler|scan|hack|inject)" security_request
 </IfModule>
 
@@ -50,9 +50,6 @@
 \"api_key\":\"[redacted]\",\
 \"rate_limit\":\"%{X-RateLimit-Remaining}o\"\
 }" api_log
-
-    # Error Log Format (for CustomLog, not ErrorLog)
-    LogFormat "%t [ERROR] %a \"%r\" %>s \"%{User-Agent}i\" error:\"%e\"" error_log_format
 
     # HTTP/2 Enhanced Format
     LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\" %{ms}T proto:%{HTTP2}n ssl:%{SSL_PROTOCOL}x cipher:%{SSL_CIPHER}x" h2_combined
