--- a/src/flavor/apache/Dockerfile
+++ b/src/flavor/apache/Dockerfile
@@ -70,6 +70,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
 # Layer 1: System packages + gosu
 RUN apt-get update && apt-get install -y --no-install-recommends \
     apache2 \
+    brotli \
     supervisor \
     curl \
     openssl \
@@ -116,6 +117,7 @@ RUN install-php-extensions \
 
 # Layer 6: Apache configuration
 RUN a2dismod mpm_prefork 2>/dev/null || true \
+    && a2enmod brotli \
     && a2enmod mpm_event \
     && a2enmod rewrite headers expires ssl proxy proxy_fcgi http2 \
     && a2dissite 000-default
@@ -245,9 +247,15 @@ COPY src/supervisor/supervisord.conf /etc/supervisor/
 COPY src/script/common/ /usr/local/bin/common/
 COPY src/script/entrypoint.sh /usr/local/bin/entrypoint
 
-# Layer 21: Enable only security configuration
-# Site selection will be done dynamically by 30-ssl.sh script
-RUN a2enconf security php-fpm-proxy \
+# Layer 21: Enable only security configuration by default
+RUN a2enconf \
+    01-performance.conf \
+    02-security.conf \
+    03-ssl-tls.conf \
+    04-compression.conf \
+    06-php-fpm.conf \
+    07-logging.conf \
+    08-rate-limiting.conf \
     && a2dissite 000-default 2>/dev/null || true
 
 # Layer 22: Make scripts executable
