Apply fixed review coderabbitai nitpick comments.

--- a/src/flavor/apache/etc/conf-available/04-compression.conf
+++ b/src/flavor/apache/etc/conf-available/04-compression.conf
@@ -27,19 +27,13 @@
 
     # Don't compress already compressed files
     SetEnvIfNoCase Request_URI \
-        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|rar|bz2|7z|tar)$ \
+        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
         no-brotli
 
     # Set proper Vary header
     <IfModule mod_headers.c>
         Header merge Vary "Accept-Encoding"
     </IfModule>
-
-    # Force Brotli for specific file types
-    <FilesMatch "\.(html|htm|css|js|json|xml|svg)$">
-        SetOutputFilter BROTLI_COMPRESS
-        SetEnv no-gzip 1
-    </FilesMatch>
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -67,7 +61,7 @@
 
         # Don't compress already compressed files
         SetEnvIfNoCase Request_URI \
-            \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|rar|bz2|7z|tar)$ \
+            \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
             no-gzip
 
         # Set proper Vary header
