--- a/src/flavor/apache/Dockerfile
+++ b/src/flavor/apache/Dockerfile
@@ -119,7 +119,7 @@ RUN install-php-extensions \
 RUN a2dismod mpm_prefork 2>/dev/null || true \
     && a2enmod brotli \
     && a2enmod mpm_event \
-    && a2enmod rewrite headers expires ssl proxy proxy_fcgi http2 \
+    && a2enmod filter rewrite headers expires ssl proxy proxy_fcgi http2 \
     && a2dissite 000-default
 
 # Layer 7: Create directories and set permissions
@@ -247,7 +247,7 @@ COPY src/supervisor/supervisord.conf /etc/supervisor/
 COPY src/script/common/ /usr/local/bin/common/
 COPY src/script/entrypoint.sh /usr/local/bin/entrypoint
 
-# Layer 21: Enable only security configuration by default
+# Layer 21: Enable Apache configurations
 RUN a2enconf \
     01-performance.conf \
     02-security.conf \
