--- a/src/flavor/apache/etc/conf-available/04-compression.conf
+++ b/src/flavor/apache/etc/conf-available/04-compression.conf
@@ -1,44 +1,34 @@
 #==============================================================================
-# Compression Configuration - Brotli + Gzip Optimization
-# Modern compression for better performance
+# Compression Configuration - Brotli + Gzip
 #==============================================================================
 
 #------------------------------------------------------------------------------
-# Brotli Compression (Preferred)
+# Brotli Compression (Primary)
 #------------------------------------------------------------------------------
 <IfModule mod_brotli.c>
-    # Content types to compress
+    # Basic Brotli parameters
+    BrotliCompressionMaxInputBlock 16
+    BrotliCompressionQuality 6
+    BrotliCompressionWindow 18
+
+    # Apply Brotli to common web content types
     AddOutputFilterByType BROTLI_COMPRESS \
         text/html \
         text/plain \
         text/xml \
         text/css \
         text/javascript \
-        text/x-component \
-        text/x-js \
-        text/richtext \
-        text/xsd \
-        text/xsl \
         application/javascript \
         application/x-javascript \
         application/json \
-        application/ld+json \
         application/xml \
         application/xhtml+xml \
-        application/rss+xml \
-        application/atom+xml \
-        application/x-font-ttf \
-        application/vnd.ms-fontobject \
-        application/x-font-opentype \
-        application/x-font-truetype \
-        application/manifest+json \
-        image/svg+xml \
-        image/x-icon
+        image/svg+xml
 
     # Don't compress already compressed files
     SetEnvIfNoCase Request_URI \
-        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|rar|bz2|7z|tar|lzma|Z)$ \
-        no-br no-gzip dont-vary
+        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
+        no-brotli
 
     # Set proper Vary header
     <IfModule mod_headers.c>
@@ -50,91 +40,34 @@
 # Gzip Compression (Fallback)
 #------------------------------------------------------------------------------
 <IfModule mod_deflate.c>
-    # Only use gzip if Brotli is not available
+    # Only use gzip if Brotli module is not available
     <IfModule !mod_brotli.c>
-        SetOutputFilter DEFLATE
-
-        # Compression level (6 is good balance)
+        # Basic deflate parameters
         DeflateCompressionLevel 6
-        DeflateMemLevel 9
-        DeflateWindowSize 15
 
-        # Content types to compress (same as Brotli)
+        # Apply to same content types as Brotli
         AddOutputFilterByType DEFLATE \
             text/html \
             text/plain \
             text/xml \
             text/css \
             text/javascript \
-            text/x-component \
-            text/x-js \
-            text/richtext \
-            text/xsd \
-            text/xsl \
             application/javascript \
             application/x-javascript \
             application/json \
-            application/ld+json \
             application/xml \
             application/xhtml+xml \
-            application/rss+xml \
-            application/atom+xml \
-            application/x-font-ttf \
-            application/vnd.ms-fontobject \
-            application/x-font-opentype \
-            application/x-font-truetype \
-            application/font-woff \
-            application/manifest+json \
-            image/svg+xml \
-            image/x-icon
+            image/svg+xml
 
         # Don't compress already compressed files
         SetEnvIfNoCase Request_URI \
-            \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|rar|bz2|7z|tar|lzma|Z)$ \
-            no-gzip dont-vary
-
-        # Netscape 4.x workaround
-        BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
-        BrowserMatch ^Mozilla/4 gzip-only-text/html
-        BrowserMatch ^Mozilla/4\.0[678] no-gzip
+            \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
+            no-gzip
 
         # Set proper Vary header
         <IfModule mod_headers.c>
             Header merge Vary "Accept-Encoding"
         </IfModule>
-    </IfModule>
-</IfModule>
-
-#------------------------------------------------------------------------------
-# Quality Control
-#------------------------------------------------------------------------------
-# Don't compress for slow connections
-<IfModule mod_headers.c>
-    # Check connection speed and adjust compression
-    SetEnvIf User-Agent ".*MSIE.*" ie_user_agent
-    Header set Vary "Accept-Encoding, User-Agent" env=ie_user_agent
-</IfModule>
-
-# Pre-compression support (if you pre-compress files)
-<IfModule mod_rewrite.c>
-    # Enable rewrite engine
-    RewriteEngine On
-
-    # Serve pre-compressed assets for CSS/JS only
-    RewriteCond %{REQUEST_FILENAME} -f
-    RewriteCond %{HTTP:Accept-Encoding} br
-    RewriteRule ^(.+)\.(css|js)$ $1.$2.br [QSA,L,E=BR:1]
-
-    RewriteCond %{REQUEST_FILENAME} -f
-    RewriteCond %{HTTP:Accept-Encoding} gzip
-    RewriteRule ^(.+)\.(css|js)$ $1.$2.gz [QSA,L,E=GZ:1]
-
-    # Set correct Content-Encoding for pre-compressed files
-    <IfModule mod_headers.c>
-        Header set Content-Encoding "br" env=BR
-        Header set Content-Encoding "gzip" env=GZ
-        Header set Content-Type "text/css" "expr=%{REQUEST_URI} =~ m#\.css(\.br|\.gz)$#"
-        Header set Content-Type "application/javascript" "expr=%{REQUEST_URI} =~ m#\.js(\.br|\.gz)$#"
     </IfModule>
 </IfModule>
 
